--- a/src/main/resources/templates/status.html
+++ b/src/main/resources/templates/status.html
@@ -1,8 +1,9 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Getting Started: Serving Web Content</title>
+    <title>GC Live</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script th:inline="javascript" th:if="${request.state != T(net.funkenburg.gc.backend.RequestState).DONE}">
         /*[+
             setTimeout(function() {
